[gd_scene load_steps=35 format=3 uid="uid://cwvuu8g0ih3i8"]

[ext_resource type="Script" path="res://addons/popochiu/engine/objects/gui/templates/simple_click/simple_click_gui.gd" id="1_268ni"]
[ext_resource type="Theme" uid="uid://dpequqav4rjaf" path="res://addons/popochiu/engine/objects/gui/resources/base_gui_theme.tres" id="1_uf1ey"]
[ext_resource type="PackedScene" uid="uid://esorelppu4hw" path="res://addons/popochiu/engine/objects/gui/components/hover_text/hover_text.tscn" id="2_6qu0l"]
[ext_resource type="Texture2D" uid="uid://bocign602kxhh" path="res://addons/popochiu/engine/objects/gui/templates/simple_click/images/simple_click_cursor.png" id="3_718yk"]
[ext_resource type="PackedScene" uid="uid://bdgs3xsbq3gdd" path="res://addons/popochiu/engine/objects/gui/components/system_text/system_text.tscn" id="4_o82xq"]
[ext_resource type="PackedScene" uid="uid://dhsfl8ot4j5fj" path="res://addons/popochiu/engine/objects/gui/components/dialog_menu/dialog_menu.tscn" id="5_ayg0j"]
[ext_resource type="PackedScene" uid="uid://bpl3qjbxonfpb" path="res://addons/popochiu/engine/objects/gui/components/dialog_text/dialog_caption/dialog_caption.tscn" id="5_t54kn"]
[ext_resource type="PackedScene" uid="uid://ciar5j7qm85bc" path="res://addons/popochiu/engine/objects/gui/components/inventory_bar/inventory_bar.tscn" id="6_ovwnh"]
[ext_resource type="PackedScene" uid="uid://0cqerawlxb3o" path="res://addons/popochiu/engine/objects/gui/components/settings_bar/settings_bar.tscn" id="7_mtpwc"]
[ext_resource type="PackedScene" uid="uid://dfrsiyyqncspo" path="res://addons/popochiu/engine/objects/gui/components/popups/history_popup/history_popup.tscn" id="8_207hf"]
[ext_resource type="PackedScene" uid="uid://cndputybyj57n" path="res://addons/popochiu/engine/objects/gui/components/popups/save_and_load_popup/save_and_load_popup.tscn" id="9_ueme0"]
[ext_resource type="PackedScene" uid="uid://dwxm2p1iyhpx6" path="res://addons/popochiu/engine/objects/gui/components/popups/sound_settings_popup/sound_settings_popup.tscn" id="10_csjib"]
[ext_resource type="PackedScene" uid="uid://de68lx1xqv7fb" path="res://addons/popochiu/engine/objects/gui/components/popups/text_settings_popup/text_settings_popup.tscn" id="13_dn3wu"]
[ext_resource type="PackedScene" uid="uid://bnjo044fkdcq7" path="res://addons/popochiu/engine/objects/gui/components/popups/quit_popup/quit_popup.tscn" id="14_m3nqq"]

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("3_718yk")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("3_718yk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource("3_718yk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource("3_718yk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource("3_718yk")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3qtx"]
atlas = ExtResource("3_718yk")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("3_718yk")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("3_718yk")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource("3_718yk")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource("3_718yk")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("3_718yk")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("3_718yk")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("3_718yk")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource("3_718yk")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource("3_718yk")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("3_718yk")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("3_718yk")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource("3_718yk")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("3_718yk")
region = Rect2(544, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1bbe3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}, {
"duration": 1.0,
"texture": SubResource("12")
}, {
"duration": 1.0,
"texture": SubResource("12")
}, {
"duration": 1.0,
"texture": SubResource("11")
}],
"loop": true,
"name": &"active",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("15")
}, {
"duration": 1.0,
"texture": SubResource("16")
}],
"loop": true,
"name": &"down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3qtx")
}],
"loop": true,
"name": &"gui",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("5")
}],
"loop": true,
"name": &"left",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("18")
}],
"loop": false,
"name": &"look",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("17")
}],
"loop": false,
"name": &"none",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("9")
}],
"loop": false,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}],
"loop": true,
"name": &"right",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("14")
}],
"loop": false,
"name": &"search",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("19")
}],
"loop": false,
"name": &"talk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}],
"loop": true,
"name": &"up",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("13")
}],
"loop": false,
"name": &"use",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("8")
}],
"loop": false,
"name": &"wait",
"speed": 5.0
}]

[node name="SimpleClickGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_uf1ey")
script = ExtResource("1_268ni")

[node name="Cursor" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_1bbe3")
animation = &"wait"

[node name="HoverText" parent="." instance=ExtResource("2_6qu0l")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
offset_top = -19.0
offset_bottom = -4.0
grow_vertical = 0
hide_during_dialogs = true

[node name="DialogCaption" parent="." instance=ExtResource("5_t54kn")]
layout_mode = 1

[node name="DialogMenu" parent="." instance=ExtResource("5_ayg0j")]
visible = false
layout_mode = 1

[node name="InventoryBar" parent="." instance=ExtResource("6_ovwnh")]
layout_mode = 1

[node name="SettingsBar" parent="." instance=ExtResource("7_mtpwc")]
unique_name_in_owner = true
layout_mode = 1

[node name="SystemText" parent="." instance=ExtResource("4_o82xq")]
layout_mode = 1

[node name="Popups" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SaveAndLoadPopup" parent="Popups" instance=ExtResource("9_ueme0")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="TextSettingsPopup" parent="Popups" instance=ExtResource("13_dn3wu")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="SoundSettingsPopup" parent="Popups" instance=ExtResource("10_csjib")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="HistoryPopup" parent="Popups" instance=ExtResource("8_207hf")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="QuitPopup" parent="Popups" instance=ExtResource("14_m3nqq")]
unique_name_in_owner = true
visible = false
layout_mode = 1
